--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-image-zoom": "^1.3.1",
+    "react-material-iconic-font": "^2.0.0",
+    "react-scripts": "3.4.3",
+    "react-toasts": "^3.0.6",
+    "styled-components": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +34,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
+  },
+  "devDependencies": {
+    "@iconify/icons-heroicons-solid": "^1.0.4",
+    "@iconify/icons-zmdi": "^1.0.3",
+    "@iconify/react": "^1.1.3"
   }
 }
